0504 bind_delegate, effect

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,8 @@ fabric.properties
 .idea/**/markdown-navigator/
 
 # End of https://www.gitignore.io/api/intellij
+web/images/파댕이_마자마자.gif
+
+web/images/파댕이_물어보신분.gif
+
+web/images/파댕이_우왕.gif
